updated code and design

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css\index.css">
 </head>
 <body>
 
-<h1>Welcome to the Proj208101r</h1>
+<div class="container">
+    <h1>Welcome to Proj208101</h1>
 
-<a href="BMI/bmi.html">BMI Calculator</a><br>
-<a href="todo/todo.html">Todo Task</a><br>
-<a href="Height/height.html">Height Estimate</a><br>
+    <a href="html/bmi.html">BMI Calculator</a>
+    <a href="html/todo.html">Todo Task</a>
+    <a href="html/height.html">Height Estimate</a>
+</div>
 
 </body>
 </html>
